tests/fixtures/invalid/pow_set_set_list.py
# Cannot call pow() with Set[int], Set[int], List[int]
x = pow({1, 2, 3}, {1, 2, 3}, [1, 2, 3])
